Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-9692

lseek() in MutationLog returns a negative value that caused assertion crash

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 2.5.0, 3.0
    • 2.5.0
    • couchbase-bucket
    • Security Level: Public
    • None

    Description

        • Last message in was {#Port<0.3181>,
          Unknown macro: {exit_status,134}

          }

        • When Server state == {state,#Port<0.3181>,memcached,
          {["memcached: src/mutation_log.cc:222: void MutationLog::prepareWrites(): Assertion `lseek_result >= 0' failed.",
          "Tue Dec 3 11:55:01.063003 PST 3: (vcookie) metadata loaded in 5814 ms",
          "Tue Dec 3 11:55:01.062953 PST 3: (vcookie) Warning: failed to open database file for vBucket = 1023 rev = 1",

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thuan Thuan Nguyen
            chiyoung Chiyoung Seo (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              PagerDuty