MB-9692 Handle MutationLog lseek errors gracefully

Instead of asserting throw appropriate exception with logs.

Change-Id: Id84fc20bd04170d455bbb2afcfaf0790168df749
Reviewed-on: http://review.couchbase.org/30901
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Tested-by: Chiyoung Seo <chiyoung@couchbase.com>